# k8st

./: .gitignore  README.md  README_EN.md  pyproject.toml
.github/workflows/: build.yaml  build_docker.yaml  release.yaml
docker/: Dockerfile
k8st/: commands_config.yaml  constants.py  logger_confiuration.py  main.py
k8st/commands/: clean_release_conflict.py  debug_pod.py  del_rel_ver.py  get_secret.py  init_tool.py  login.py  pod_execution.py  rollback.py  set_context.py
k8st/core/: command_registry.py
k8st/services/: aws_service.py  helm_service.py  kube_service.py  required_package.py  resource_service.py
k8st/utils/: console.py  file.py
tests/: test_aws_service.py  test_main.py
tests/services/: test_aws_service.py  test_kube_service.py
